# hexify-oxide

./: Cargo.toml
src/: main.rs
static/css/: styles.css
templates/: base.html  dec-result.html  hex-result.html  index.html  styles.css
