[package]
name = "hexify-oxide"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = "0.6.20"
serde = { version = "1.0.192", features = ["serde_derive"] }
shuttle-axum = "0.34"
shuttle-runtime = "0.34"
thiserror = "1.0.50"
tokio = "1.28.2"
tower-http = { version = "0.4.4", features = ["fs"] }
tracing = "0.1.40"
